# TacViewStats

./: .gitignore  README.md  changelog.md  comments.txt  config.ini  main.py  pyproject.toml
.circleci/: config.yml
src/: dirManager.py  fileManager.py  lineHandler.py  outcomeWriter.py
src/classes/: DCSEvent.py  DCSObject.py  FileData.py
src/data/: acmiAttrDicts.py  coordReferences.py  typeReferences.py  valueReferences.py
src/managers/: dataProcessor.py  dirManager.py  fileManager.py  lineHandler.py  logHandler.py  outcomeWriter.py
src/tests/: run_tests.py  test_classes.py  test_classes_DCSEvent.py  test_classes_DCSObject.py  test_classes_FileData.py  test_config.py  test_dirManager.py  test_fileManager.py  test_managers_dirManager.py  test_managers_fileManager.py  test_managers_logHandler.py  test_utils_coordUtils.py  test_utils_fileUtils.py  test_utils_logUtils.py
src/tests/test_data/: TEST_DIR.txt.acmi  TEST_KILL_ATTRIBUTION.txt.acmi  TEST_LAUNCHER_ATTRIBUTION.txt.acmi  TEST_ZIP_TRIMMED.mod.zip.acmi  Tacview-20230620-222105-DCS-PG-AA-Trainer-Modern-v2.6.zip.acmi  ZIP_TEST.acmi
src/utils/: config.py  configUtils.py  coordUtils.py  fileUtils.py  logUtils.py  mathUtils.py  outputUtils.py  performance.py  processingUtils.py  timeUtils.py
